--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_info_layout.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_info_layout.xml
@@ -47,20 +47,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_60"
-            android:layout_marginTop="@dimen/dp_8"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:weightSum="5">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_sale_info"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
+                android:layout_weight="3.8"
                 android:text="@string/module_mine_sale_nh_info"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -80,7 +81,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -88,7 +89,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.nhAssetId}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -108,7 +109,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_price"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -116,7 +117,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.priceAmount}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -136,7 +137,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_valid_time"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -144,7 +145,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.validTime}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -165,7 +166,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_fee"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -173,7 +174,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.saleFee}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -193,7 +194,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_miner_fee"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -201,7 +202,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:singleLine="true"
                 android:text="@={viewModel.minerFee}"
                 android:textColor="@color/color_262A33"
@@ -222,7 +223,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_memo"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -230,7 +231,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:singleLine="true"
                 android:text="@={viewModel.orderMemo}"
                 android:textColor="@color/color_262A33"
