--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_transfer_nh_asset_confirm.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_transfer_nh_asset_confirm.xml
@@ -47,20 +47,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_60"
-            android:layout_marginTop="@dimen/dp_8"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:weightSum="5">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_sale_info"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
+                android:layout_weight="3.8"
                 android:text="@string/module_mine_transfer_nh_info"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -80,7 +81,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_transfer_from"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -88,7 +89,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.from}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -108,7 +109,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_transfer_to"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -116,7 +117,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.to}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -136,7 +137,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -144,7 +145,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.nhAssetId}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -165,7 +166,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1.2"
                 android:text="@string/module_mine_nh_asset_sale_miner_fee"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -173,17 +174,11 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.2"
+                android:layout_weight="3.8"
                 android:text="@={viewModel.minerFee}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
         </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/color_E8EBF1" />
-
 
         <View
             android:layout_width="match_parent"
