--- a/BCX_Wallet/module_asset/src/main/res/layout/dialog_buy_order_confirm.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/dialog_buy_order_confirm.xml
@@ -95,6 +95,35 @@
                 android:textSize="@dimen/sp_15" />
         </LinearLayout>
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/color_E8EBF1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_60"
+            android:gravity="center_vertical"
+            android:weightSum="5">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.2"
+                android:text="@string/module_asset_buy_nh_asset_id"
+                android:textColor="@color/color_A5A9B1"
+                android:textSize="@dimen/sp_15" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3.8"
+                android:text="@={viewModel.nhAssetId}"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/sp_15" />
+        </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
