fix (all)  modify string about nh asset

--- a/BCX_Wallet/module_asset/src/main/res/layout/dialog_buy_order_confirm.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/dialog_buy_order_confirm.xml
@@ -194,7 +194,7 @@
             android:gravity="center"
             android:paddingTop="@dimen/dp_7"
             android:paddingBottom="@dimen/dp_7"
-            android:text="@string/module_asset_buy_order_confirm_btn"
+            android:text="@string/next_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
