--- a/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_mine_nh_order.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_mine_nh_order.xml
@@ -166,11 +166,11 @@
                     android:layout_gravity="bottom"
                     android:background="@drawable/btn_bigger_round_bg"
                     android:gravity="center"
-                    android:paddingLeft="@dimen/dp_10"
-                    android:paddingTop="@dimen/dp_4"
-                    android:paddingRight="@dimen/dp_10"
-                    android:paddingBottom="@dimen/dp_4"
-                    android:text="@string/cancel_mine_nh_order_text"
+                    android:paddingLeft="@dimen/dp_12"
+                    android:paddingTop="@dimen/dp_2"
+                    android:paddingRight="@dimen/dp_12"
+                    android:paddingBottom="@dimen/dp_2"
+                    android:text="@string/cancel_text"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_13"
