--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_info_layout.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_info_layout.xml
@@ -156,35 +156,6 @@
             android:layout_height="@dimen/dp_1"
             android:background="@color/color_E8EBF1" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:gravity="center_vertical"
-            android:weightSum="5">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.2"
-                android:text="@string/module_mine_nh_asset_sale_fee"
-                android:textColor="@color/color_A5A9B1"
-                android:textSize="@dimen/sp_15" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3.8"
-                android:text="@={viewModel.saleFee}"
-                android:textColor="@color/color_262A33"
-                android:textSize="@dimen/sp_15" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/color_E8EBF1" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_60"
@@ -252,7 +223,7 @@
             android:gravity="center"
             android:paddingTop="@dimen/dp_7"
             android:paddingBottom="@dimen/dp_7"
-            android:text="@string/module_mine_sale_nh_confirm_btn"
+            android:text="@string/next_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
