--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_delete_nh_asset_confirm.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_delete_nh_asset_confirm.xml
@@ -82,7 +82,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.2"
-                android:text="@string/module_mine_nh_asset_id"
+                android:text="@string/module_mine_nh_asset_transfer_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
 
@@ -91,6 +91,34 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3.8"
                 android:text="@={viewModel.assetId}"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/sp_15" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/color_E8EBF1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_60"
+            android:gravity="center_vertical"
+            android:weightSum="5">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.2"
+                android:text="@string/module_mine_prop_asset_word_view"
+                android:textColor="@color/color_A5A9B1"
+                android:textSize="@dimen/sp_15" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3.8"
+                android:text="@={viewModel.worldView}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
         </LinearLayout>
@@ -145,7 +173,7 @@
             android:gravity="center"
             android:paddingTop="@dimen/dp_7"
             android:paddingBottom="@dimen/dp_7"
-            android:text="@string/module_mine_asset_delete_confirm"
+            android:text="@string/next_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
