refactor (all)  Optimizing layout and formatting code

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_account_manage_list.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_account_manage_list.xml
@@ -64,8 +64,7 @@
             android:layout_weight="1"
             android:fastScrollEnabled="false"
             android:overScrollMode="never"
-            android:paddingTop="@dimen/dp_15"
-            android:paddingBottom="@dimen/dp_22"
+            android:layout_marginTop="@dimen/dp_20"
             binding:adapter="@{viewModel.adapter}"
             binding:itemBinding="@{viewModel.itemBinding}"
             binding:items="@{viewModel.observableList}"
