--- a/BCX_Wallet/module_mine/src/main/res/layout/fragment_number_asset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/fragment_number_asset.xml
@@ -55,8 +55,7 @@
                 android:layout_height="match_parent"
                 android:fastScrollEnabled="false"
                 android:overScrollMode="never"
-                android:paddingTop="@dimen/dp_15"
-                android:paddingBottom="@dimen/dp_22"
+                android:layout_marginTop="@dimen/dp_20"
                 android:visibility="@{viewModel.recyclerViewVisible}"
                 binding:adapter="@{viewModel.adapter}"
                 binding:itemBinding="@{viewModel.itemBinding}"
