--- a/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_account_manage.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_account_manage.xml
@@ -15,8 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_15"
+        android:layout_marginBottom="@dimen/dp_12"
         android:background="@drawable/fragment_mine_number_asset_item_bg"
         android:gravity="center_vertical"
         android:orientation="vertical"
