--- a/BCX_Wallet/module_asset/src/main/res/layout/activity_deal_record.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/activity_deal_record.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:paddingStart="@dimen/dp_11"
-                android:paddingRight="@dimen/dp_16"
+                android:paddingEnd="@dimen/dp_16"
                 binding:onClickCommand="@{viewModel.backOnClickCommand}">
 
                 <ImageView
@@ -79,13 +79,15 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_24"
+                        android:layout_marginStart="@dimen/dp_24"
                         android:layout_marginTop="@dimen/dp_30"
                         android:gravity="bottom">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxWidth="@dimen/dp_180"
+                            android:singleLine="true"
                             android:text="@={viewModel.totalAsset}"
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_32"
@@ -94,7 +96,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_10"
+                            android:layout_marginStart="@dimen/dp_10"
                             android:text="@={viewModel.tokenSymbol}"
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_15" />
@@ -111,7 +113,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_24"
+                        android:layout_marginStart="@dimen/dp_24"
                         android:layout_marginTop="@dimen/dp_6"
                         android:text="@={viewModel.totalAssetValue}"
                         android:textColor="@color/white"
@@ -120,7 +122,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginLeft="@dimen/dp_24"
+                        android:layout_marginStart="@dimen/dp_24"
                         android:layout_weight="1"
                         android:gravity="center_vertical">
 
@@ -136,7 +138,7 @@
                         <ImageView
                             android:layout_width="@dimen/dp_20"
                             android:layout_height="@dimen/dp_20"
-                            android:layout_marginLeft="@dimen/dp_10"
+                            android:layout_marginStart="@dimen/dp_10"
                             android:src="@drawable/copy_white_icon"
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp_15"
@@ -166,7 +168,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_marginStart="@dimen/dp_5"
                             android:text="@string/module_asset_transfer_token"
                             android:textColor="@color/color_262A33"
                             android:textSize="@dimen/sp_16" />
@@ -192,7 +194,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_marginStart="@dimen/dp_5"
                             android:gravity="center"
                             android:text="@string/module_asset_receivables_token"
                             android:textColor="@color/color_262A33"
@@ -210,7 +212,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/dp_15"
+                        android:paddingStart="@dimen/dp_15"
                         android:paddingTop="@dimen/dp_17"
                         android:text="@string/module_asset_deal_record_text"
                         android:textColor="@color/color_262A33"
