fix (all) fix time from 12 hours to 24 hours

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
@@ -178,7 +178,8 @@
                     android:paddingStart="@dimen/dp_4"
                     android:text="@string/module_mine_nh_asset_sale_valid_time_default"
                     android:textColor="@color/color_A5A9B1"
-                    android:textSize="@dimen/sp_10" />
+                    android:textSize="@dimen/sp_10"
+                    tools:ignore="RtlSymmetry" />
 
             </LinearLayout>
 
