fix (SaleNHAssetViewModel)  Maximum time limit for order creation

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
@@ -176,7 +176,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/dp_4"
-                    android:text="@string/module_mine_nh_asset_sale_valid_time_default"
+                    android:text="@={viewModel.saleValidTimeDefault}"
                     android:textColor="@color/color_A5A9B1"
                     android:textSize="@dimen/sp_10"
                     tools:ignore="RtlSymmetry" />
