fix (SaleNHAssetActivity) 修改有效时间的输入类型

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
@@ -189,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:hint="@string/module_mine_nh_asset_sale_valid_time_hint"
-                android:inputType="numberDecimal"
+                android:inputType="number"
                 android:paddingTop="@dimen/dp_10"
                 android:paddingBottom="@dimen/dp_12"
                 android:text="@={viewModel.saleValidTime}" />
