style (layout) modify layout parmas

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_about_us.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_about_us.xml
@@ -108,7 +108,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/dp_1"
                     android:background="@color/color_ffe6e6e6" />
 
                 <LinearLayout
@@ -139,7 +139,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/dp_1"
                     android:background="@color/color_ffe6e6e6"
                     android:visibility="gone" />
 
@@ -172,7 +172,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/dp_1"
                     android:background="@color/color_ffe6e6e6" />
 
                 <LinearLayout
@@ -203,7 +203,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/dp_1"
                     android:background="@color/color_ffe6e6e6" />
 
                 <!-- <Button
